--- a/src/app/templates/auth/login.html
+++ b/src/app/templates/auth/login.html
@@ -1,6 +1,6 @@
 {% extends "./base.html" %}
 
-{% block title %}Login{% endblock %}
+{% block title %}Login - PokeQuest{% endblock %}
 
 {% block customCSS %}
   <link rel="stylesheet" href="{{ url_for('static', filename='css/auth_styles.css')}}">
