--- a/src/app/templates/auth/login.html
+++ b/src/app/templates/auth/login.html
@@ -25,7 +25,7 @@
           <label>Password</label>
         </div>
         <button type="submit">Log in</button>
-        <p class="register" style="display: block; text-align: right;">Don't have an account?  <a href="register.html">Sign up now</a></p>
+        <p class="register" style="display: block; text-align: right;">Don't have an account?  <a href="register">Sign up now</a></p>
       </form>
     </div>
   </div>
