--- a/src/app/templates/menu/menu.html
+++ b/src/app/templates/menu/menu.html
@@ -17,9 +17,9 @@
 
       <!-- Botones -->
       <div class="menu-buttons">
-        <button class="menu-btn">Play</button>
-        <button class="menu-btn">Pokédex</button>
-        <button class="menu-btn">Ranking</button>
+        <button class="menu-btn" id="playBtn">Play</button>
+        <button class="menu-btn" id="pokedexBtn">Pokédex</button>
+        <button class="menu-btn" id="rankingBtn">Ranking</button>
       </div>
     </div>
 
@@ -35,5 +35,15 @@
       <img src="https://img.icons8.com/ios-filled/50/000000/exit.png" alt="Exit" class="icon">
     </div>
   </div>
+
+<script>
+    document.getElementById("playBtn").addEventListener("click", function() {
+        window.location.href = "{{ url_for('play') }}";  // Redirige a la ruta de Play
+    });
+
+    document.getElementById("pokedexBtn").addEventListener("click", function() {
+      window.location.href = "{{ url_for('pokedex') }}";  // Redirige a la ruta de Pokedex
+  });
+</script>
 {% endblock %}
 
