--- a/src/app/static/css/auth_styles.css
+++ b/src/app/static/css/auth_styles.css
@@ -202,3 +202,40 @@ button:hover {
 .login-box button:hover {
     background-color: #666;
 }
+
+
+/* Estilo para el popup */
+.popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Fondo semitransparente */
+    justify-content: center;
+    align-items: center;
+}
+
+/* Estilos para el contenido del popup */
+.popup-content {
+    background-color: rgb(255, 0, 0);
+    padding: 20px;
+    border-radius: 5px;
+    text-align: center;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: fit-content;
+    width: 300px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+/* Estilo para el botón de cerrar */
+.close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 30px;
+    cursor: pointer;
+}
