add error message to register for use by flask

--- a/src/app/templates/auth/register.html
+++ b/src/app/templates/auth/register.html
@@ -31,6 +31,7 @@
         <button type="submit">Create account</button>
         <p class="register" style="display: block; text-align: right;">I already have an account.  <a href="login">Log in</a></p>
       </form>
+      {{err_popup()}}
     </div>
   </div>
 
