--- a/src/app/templates/base.html
+++ b/src/app/templates/base.html
@@ -1,4 +1,16 @@
 <!DOCTYPE html>
+{% macro err_popup() %}
+{% if message is defined %}  <!-- action para cuando se pulsa el botón enviar el formulario -->
+    <!-- El Popup -->
+  <div id="popup" class="popup">
+    <div class="popup-content">
+        <span id="closePopup" class="close">&times;</span>
+        <h2>Error</h2>
+        <p>{{message}}</p>
+    </div>
+  </div>
+{% endif %}
+{% endmacro %}
 <html lang="en">
 <head>
   <meta charset="UTF-8">
