--- a/src/app/templates/menu/menu.html
+++ b/src/app/templates/menu/menu.html
@@ -30,7 +30,7 @@
 
     <!-- Menú superior derecho -->
     <div class="top-menu">
-      <img src="https://img.icons8.com/ios-filled/50/000000/exit.png" alt="Exit" class="icon">
+      <img  id="exitBtn" src="https://img.icons8.com/ios-filled/50/000000/exit.png" alt="Exit" class="icon">
     </div>
   </div>
 
@@ -40,9 +40,11 @@
     });
 
     document.getElementById("pokedexBtn").addEventListener("click", function() {
-      // Redirige a la ruta de Pokedex
-      window.location.href = "{{ url_for('pokedex') }}";
+      window.location.href = "{{ url_for('pokedex') }}"; // Redirige a la ruta de Pokedex
   });
+    document.getElementById("exitBtn").addEventListener("click", function() {
+      window.location.href = "{{ url_for('login') }}";  // Redirige al login
+});
 </script>
 {% endblock %}
 
