--- a/src/app/templates/ranking/ranking.html
+++ b/src/app/templates/ranking/ranking.html
@@ -1,38 +1,50 @@
 {% extends "./base.html" %}
 
-{% block title %}Pokédex - PokeQuest{% endblock %}
+{% block title %}Ranking - PokeQuest{% endblock %}
 
 {% block customCSS %}
   <link rel="stylesheet" href="{{ url_for('static', filename='css/ranking_styles.css')}}">
 {% endblock %}
-  <div class="container">
-    <div class="ranking">
-        <table class="ranking-table">
-            <thead>
-                <tr>
-                    <th>Rank</th>
-                    <th>User</th>
-                    <th>Score</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for user in top_users %}
-                <tr>
-                    <td>{{ loop.index }}</td>
-                    <td>{{ user.username }}</td>
-                    <td>{{ user.high_score }}</td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-        <div class="your-ranking">
-          Your Ranking: {{ user_ranking }}
-        </div>
+{% block body %}
+<div class="container">
+  <!-- Menú lateral izquierdo -->
+  <div class="menu">
+    <!-- Logo fijo en la parte superior -->
+    <div class="logo">
+      <img src="./static/img/logo_2.png" alt="Logo del juego">
     </div>
 
-    <div class="image-container">
-        <img src="./static/img/ranking_icon.png" alt="Ranking Image">
+    <!-- Tabla -->
+    <div class="menu-table">
+      <table>
+        <thead>
+          <tr>
+            <th>Ranking</th>
+            <th>User</th>
+            <th>Score</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for user in top_users %}
+          <tr>
+            <td>{{ loop.index }}</td>
+            <td>{{ user.username }}</td>
+            <td>{{ user.high_score }}</td>
+          </tr>
+          {% endfor %}
+        </tbody>
+      </table>
     </div>
   </div>
-{% block body %}
+
+  <!-- Imagen central del menú -->
+  <div class="pokemon-display">
+    <img src="./static/img/rank_icon.png" alt="Pokémon" class="pokemon-img">
+  </div>
+
+  <!-- Menú superior derecho -->
+  <div class="top-menu">
+    <img src="https://img.icons8.com/ios-filled/50/000000/delete-sign.png" alt="Cross" class="icon">
+  </div>
+</div>
 {% endblock %}
