--- a/src/app/templates/ranking/ranking.html
+++ b/src/app/templates/ranking/ranking.html
@@ -3,48 +3,62 @@
 {% block title %}Ranking - PokeQuest{% endblock %}
 
 {% block customCSS %}
-  <link rel="stylesheet" href="{{ url_for('static', filename='css/ranking_styles.css')}}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/ranking_styles.css') }}">
 {% endblock %}
-{% block body %}
-<div class="container">
-  <!-- Menú lateral izquierdo -->
-  <div class="menu">
-    <!-- Logo fijo en la parte superior -->
-    <div class="logo">
-      <img src="./static/img/logo_2.png" alt="Logo del juego">
-    </div>
 
-    <!-- Tabla -->
-    <div class="menu-table">
-      <table>
+{% block body %}
+  <div class="container">
+    <!-- Menú lateral izquierdo -->
+    <div class="menu">
+      <!-- Logo fijo en la parte superior -->
+      <div class="logo">
+        <img src="{{ url_for('static', filename='img/logo_2.png') }}" alt="Logo del juego">
+      </div>
+  
+    <!-- Contenedor principal de la tabla -->
+    <div class="ranking-container">
+      <h2>🚀 Top users 🚀</h2>
+
+      <table class="ranking-table">
         <thead>
           <tr>
-            <th>Ranking</th>
+            <th>Rank</th>
             <th>User</th>
-            <th>Score</th>
+            <th>Highest score</th>
           </tr>
         </thead>
         <tbody>
           {% for user in top_users %}
-          <tr>
-            <td>{{ loop.index }}</td>
-            <td>{{ user.username }}</td>
-            <td>{{ user.high_score }}</td>
-          </tr>
+            <tr>
+              <td>{{ loop.index }}</td>
+              <td>{{ user.username }}</td>
+              <td>{{ user.high_score }}</td>
+            </tr>
           {% endfor %}
         </tbody>
       </table>
+
+      <div class="user-info">
+        <p><strong>Your highest score is:</strong> {{ user_high_score }}</p>
+        <p><strong>Your rank is:</strong> {{ user_ranking }}</p>
+      </div>
+
+    </div>
+    </div>
+    
+    <!-- Imagen central del menú -->
+    <div class="pokemon-display">
+      <img src="{{ url_for('static', filename='img/rank_icon.png') }}" alt="Pokémon" class="pokemon-img">
+    </div>
+
+    <!-- Menú superior derecho -->
+    <div class="top-menu">
+      <img id="exitBtn" src="https://img.icons8.com/ios-filled/50/000000/delete-sign.png" alt="Exit" class="icon">
     </div>
   </div>
-
-  <!-- Imagen central del menú -->
-  <div class="pokemon-display">
-    <img src="./static/img/rank_icon.png" alt="Pokémon" class="pokemon-img">
-  </div>
-
-  <!-- Menú superior derecho -->
-  <div class="top-menu">
-    <img src="https://img.icons8.com/ios-filled/50/000000/delete-sign.png" alt="Cross" class="icon">
-  </div>
-</div>
+  <script>
+    document.getElementById("exitBtn").addEventListener("click", function() {
+      window.location.href = "{{ url_for('menu') }}";  // Redirige al menu
+    });
+</script>
 {% endblock %}
