cambios pokedex.html

--- a/src/app/templates/pokedex/pokedex.html
+++ b/src/app/templates/pokedex/pokedex.html
@@ -7,23 +7,11 @@
 {% endblock %}
 
 {% block body %}
-    <header>
-        <h1>Pokédex</h1>
-        <div class="sort-container">
-            <label for="sort-select">Ordenar por:</label>
-            <select id="sort-select">
-                <option value="number-asc">Número inferior</option>
-                <option value="number-desc">Número superior</option>
-                <option value="name-asc">A-Z</option>
-                <option value="name-desc">Z-A</option>
-            </select>
-        </div>
-    </header>
     <main>
         <section id="pokedex-grid" class="pokedex-grid">
             <!-- Aquí se agregarán dinámicamente los Pokémon -->
         </section>
-        <button id="load-more" class="load-more">Cargar más</button>
+        <button id="load-more" class="load-more">Load More</button>
     </main>
     <footer>
         <p>© 2024 - PokeQuest</p>
