--- a/src/app/templates/pokedex/pokedex_info.html
+++ b/src/app/templates/pokedex/pokedex_info.html
@@ -11,7 +11,7 @@
         <div class="header">Pokédex</div>
         <div class="screen">
             <div class="pokemon-image">
-                <img src="pikachu.jpg" alt="Pokemon Image" id="pokemon-image">
+                <img src="https://images.wikidexcdn.net/mwuploads/wikidex/9/9a/latest/20190414143916/Snivy.png" alt="Pokemon Image" id="pokemon-image">
             </div>
             <div class="pokemon-info">
                 <div class="info" id="pokemon-id">ID: 25</div>
