--- a/src/app/templates/pokedex/pokedex.html
+++ b/src/app/templates/pokedex/pokedex.html
@@ -11,13 +11,18 @@
     <img src="{{ url_for('static', filename='img/logo_2.png') }}" alt="Logo del juego">
   </div>
 <main>
+    <div id="pokedex-info-container">
+        {% if not pokemon_selected_id == None %}
+        <iframe id="pokedex-info" src="{{ url_for('pokemon_info')}}?pokemon_id={{pokemon_selected_id}}" ></iframe>
+        {% endif %}
+    </div>
     <section id="pokedex-grid" class="pokedex-grid">
         <table class="unlocked_pokemon">
             {% for row in unlocked_pokemon_list|batch(5) %}
             <tr>
                 {% for pokemon in row %}
                 <td>
-                    <button class="pokemon-card" onclick="viewPokemon('{{ pokemon[0] }}')">
+                    <button class="pokemon-card" id="pokemon-card-{{pokemon[0]}}" onclick="viewPokemon('{{ pokemon[0] }}')">
                         <img src="{{ pokemon[2] }}" alt="{{ pokemon[1] }}" class="pokemon-image">
                         <p class="pokemon-name">{{ pokemon[1] }}</p>
                     </button>
@@ -37,11 +42,27 @@
 <script>
     // Función que redirige al hacer clic en el Pokémon
     function viewPokemon(pokemonId) {
-        window.location.href = "{{ url_for('pokemon_info') }}?pokemon_id=" + pokemonId;
+        e=document.getElementById("pokemon-card-"+pokemonId)
+        t=e.style.display;
+        e.style.display = "none";
+        iframe=document.createElement("iframe")
+        iframe.id = "pokedex-info";
+        iframe.src = "{{ url_for('pokemon_info')}}?pokemon_id="+pokemonId;
+        document.getElementById("pokedex-info-container").append(iframe);
+        sleep(100);
+        e.style.display = t;
+    }
+    function sleep(ms) {
+        return new Promise(resolve => setTimeout(resolve, ms));
     }
     document.getElementById("exitBtn").addEventListener("click", function() {
         window.location.href = "{{ url_for('menu') }}";  // Redirige al menu
-      });
+    });
+    
+    function closePokedexInfo() {
+        // window.location.href = "{{url_for('pokedex')}}";
+        document.getElementById("pokedex-info").remove();
+    }
 </script>
     
 {% endblock %}
