--- a/src/app/static/css/pokedex_styles.css
+++ b/src/app/static/css/pokedex_styles.css
@@ -123,3 +123,11 @@ footer {
         font-size: 8px; /* Fuente aún más pequeña en pantallas pequeñas */
     }
 }
+
+#pokedex-info {
+    position: fixed;
+    width: 100%;
+    height:100%;
+    top:0;
+    left:0;
+}
