--- a/src/app/static/css/menu_styles.css
+++ b/src/app/static/css/menu_styles.css
@@ -2,7 +2,8 @@ body {
     margin: 0;
     font-family: Arial, sans-serif;
     background-color: #fff;
-  }
+    background-image: url("/static/img/background.png");
+}
   
   .container {
     display: flex;
@@ -133,3 +134,13 @@ body {
     }
   }
   
+/* Video de fondo */
+.background-video {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+}
