--- a/src/app/static/css/play_styles.css
+++ b/src/app/static/css/play_styles.css
@@ -7,6 +7,7 @@ body {
   align-items: center;
   height: 100vh;
   background-color: #f8f8f8;
+  background-image: url("/static/img/background.png");
 }
 
 /* Contenedor principal */
