--- a/src/app/static/css/pokedex_styles.css
+++ b/src/app/static/css/pokedex_styles.css
@@ -4,6 +4,8 @@ body {
     margin: 0;
     padding: 0;
     background-color: #fff;
+    background-image: url("/static/img/background.png");
+    background-attachment: fixed;
 }
 
 /* Estilo del logo */
