--- a/src/app/static/css/ranking_styles.css
+++ b/src/app/static/css/ranking_styles.css
@@ -2,6 +2,8 @@ body {
     margin: 0;
     font-family: Arial, sans-serif;
     background-color: #fff;
+    background-image: url("/static/img/background.png");
+    background-attachment: fixed;
 }
 
 .container {
